--- a/index.html
+++ b/index.html
@@ -7,24 +7,37 @@
     <title>Frontend Mentor | Social links profile</title>
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
-      
+      .attribution { 
+        font-size: 11px; 
+        text-align: center; 
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+      .main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: hsl(0, 0%, 98%);
+      }
     </style>
   </head>
   <body>
+    <div class="main">
+      Jessica Randall
+      London, United Kingdom
+      "Front-end developer and avid reader."
 
-    Jessica Randall
-    London, United Kingdom
-    "Front-end developer and avid reader."
-
-    GitHub
-    Frontend Mentor
-    LinkedIn
-    Twitter
-    Instagram
-  
+      GitHub
+      Frontend Mentor
+      LinkedIn
+      Twitter
+      Instagram
+    </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Cyber cube</a>.
     </div>
   </body>
 </html>
