--- a/index.html
+++ b/index.html
@@ -17,27 +17,43 @@
       .main {
         display: grid;
         place-items: center;
-        flex-direction: column;
         background-color: hsl(0, 0%, 98%);
+        background-color: #1f1f1f;
+        height: 100vh;
       }
       .main button {
         background-color: #333333;
-        width: 75px;
+        width: 150px;
+        height: 30px;
         color: white;
         text-align: center;
+        border: none;
+        border-radius: 4px;
+      }
+      body {
+        background-color: #1d1d1d;
+      }
+      .white {
+        color: white;
+      }
+      .green {
+        color: #c9ec50;
       }
     </style>
   </head>
   <body>
-    <div class="main">
-      <span>Jessica Randall</span><br>
-      <span>London, United Kingdom</span><br>
-      <span>"Front-end developer and avid reader.</span><br>
-      <button>GitHub</button><br>
-      <button>Frontend Mentor</button><br>
-      <button>LinkedIn</button><br>
-      <button>Twitter</button><br>
-      <button>Instagram</button><br>
+    <div>
+      <div class="main">
+        <img src="./assets/images/avatar-jessica.jpeg" alt="Jessica">
+        <span class="white">Jessica Randall</span>
+        <span class="green">London, United Kingdom</span>
+        <span class="white">"Front-end developer and avid reader.</span>
+        <button>GitHub</button>
+        <button>Frontend Mentor</button>
+        <button>LinkedIn</button>
+        <button>Twitter</button>
+        <button>Instagram</button>
+      </div>
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
