--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
       .green {
         color: #c9ec50;
       }
+      img {
+        border-radius: 50%;
+      }
     </style>
   </head>
   <body>
