--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
       .attribution a {
         color: hsl(228, 45%, 44%);
       }
-      .main {
+      .main2 {
         display: grid;
         place-items: center;
         background-color: hsl(0, 0%, 98%);
-        background-color: #1f1f1f;
+        background-color: #545354;
         height: 100vh;
+        margin: auto;
+        padding: 10px;
       }
-      .main button {
+      .main2 button {
         background-color: #333333;
         width: 150px;
         height: 30px;
@@ -29,6 +31,7 @@
         text-align: center;
         border: none;
         border-radius: 4px;
+        padding: 10px;
       }
       body {
         background-color: #1d1d1d;
@@ -42,11 +45,14 @@
       img {
         border-radius: 50%;
       }
+      .main {
+        
+      }
     </style>
   </head>
   <body>
-    <div>
-      <div class="main">
+    <div classs="main">
+      <div class="main2">
         <img src="./assets/images/avatar-jessica.jpeg" alt="Jessica">
         <span class="white">Jessica Randall</span>
         <span class="green">London, United Kingdom</span>
