--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
         color: hsl(228, 45%, 44%);
       }
       .main2 {
+        font-size: 10px;
         display: grid;
         place-items: center;
         background-color: hsl(0, 0%, 98%);
         background-color: #545354;
         height: 100vh;
+        width: 75%;
         margin: auto;
         padding: 10px;
       }
       .main2 button {
         background-color: #333333;
-        width: 150px;
-        height: 30px;
+        width: 200px;
+        
         color: white;
         text-align: center;
         border: none;
@@ -45,8 +47,8 @@
       img {
         border-radius: 50%;
       }
-      .main {
-        
+      span {
+        font-size: 13px;
       }
     </style>
   </head>
@@ -54,14 +56,14 @@
     <div classs="main">
       <div class="main2">
         <img src="./assets/images/avatar-jessica.jpeg" alt="Jessica">
-        <span class="white">Jessica Randall</span>
-        <span class="green">London, United Kingdom</span>
-        <span class="white">"Front-end developer and avid reader.</span>
-        <button>GitHub</button>
-        <button>Frontend Mentor</button>
-        <button>LinkedIn</button>
-        <button>Twitter</button>
-        <button>Instagram</button>
+        <span class="white">Jessica Randall</span><br>
+        <span class="green">London, United Kingdom</span><br>
+        <span class="white">"Front-end developer and avid reader.</span><br>
+        <button>GitHub</button><br>
+        <button>Frontend Mentor</button><br>
+        <button>LinkedIn</button><br>
+        <button>Twitter</button><br>
+        <button>Instagram</button><br>
       </div>
     </div>
     <div class="attribution">
