--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         display: grid;
         place-items: center;
         background-color: hsl(0, 0%, 98%);
-        background-color: #545354;
-        height: 100vh;
-        width: 75%;
+        background-color: #1f1f1f;
+        height: 100%;
+        width: 90%;
         margin: auto;
         padding: 10px;
+        border-radius: 10px;
       }
       .main2 button {
         background-color: #333333;
@@ -36,7 +37,8 @@
         padding: 10px;
       }
       body {
-        background-color: #1d1d1d;
+        background-color: #141414;
+        padding-top: 30px;
       }
       .white {
         color: white;
@@ -48,7 +50,16 @@
         border-radius: 50%;
       }
       span {
-        font-size: 13px;
+        font-size: 15px;
+      }
+      button:hover {
+        background-color: #c4f82a;
+      }
+      .main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-top: 50px;
       }
     </style>
   </head>
@@ -56,7 +67,7 @@
     <div classs="main">
       <div class="main2">
         <img src="./assets/images/avatar-jessica.jpeg" alt="Jessica">
-        <span class="white">Jessica Randall</span><br>
+        <span class="white">Jessica Randall</span>
         <span class="green">London, United Kingdom</span><br>
         <span class="white">"Front-end developer and avid reader.</span><br>
         <button>GitHub</button><br>
